--- a/app/views/evaluation_criteriums/edit.html.erb
+++ b/app/views/evaluation_criteriums/edit.html.erb
@@ -4,6 +4,8 @@
 <%= form_with(model: @evaluation_criterium, url: evaluation_criterium_path(@evaluation_criterium), method: :put) do |form| %>
   <%= form.label :criteria %><br/>
   <%= form.text_field :criteria, value: @evaluation_criterium.criteria %><br/>
+  <%= form.label :description %><br/>
+  <%= form.text_field :description, value: @evaluation_criterium.description %><br/>
 
   <br/><br/>
   <%= form.submit %>
