--- a/app/views/evaluation_criteriums/new.html.erb
+++ b/app/views/evaluation_criteriums/new.html.erb
@@ -3,5 +3,7 @@
 <%= form_with(model: @evaluation_criterium, url: evaluation_criteriums_path) do |form| %>
   <%= form.label :criteria %><br/>
   <%= form.text_field :criteria %><br/>
+  <%= form.label :description %><br/>
+  <%= form.text_field :description %><br/>
   <%= form.submit %>
 <% end %>
