--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -1,13 +1,19 @@
 list of to be evaluated
 
-  <% @tasks.each do |task| %>
-  <li>
-    <%= link_to task.instructor.name, evaluation_evaluate_path(task.id) %>&nbsp;&nbsp;&nbsp;
-    <%= task.course.course_name %>&nbsp;&nbsp;&nbsp;
-    <%= task.department.dep_name %>&nbsp;&nbsp;&nbsp;
-    <%= task.semester.sem %>&nbsp;&nbsp;&nbsp;
-</li>
-    
-  <% end %>
+
+<% if user_type == "student" %>
+  <ul>
+    <% current_user.tasks.each do |task| %>
+      <li>
+        <%= link_to task.instructor.name, evaluation_evaluate_path(task.id) %>&nbsp;&nbsp;&nbsp;
+        <%= task.course.course_name %>&nbsp;&nbsp;&nbsp;
+        <%= task.department.dep_name %>&nbsp;&nbsp;&nbsp;
+        <%= task.semester.sem %>&nbsp;&nbsp;&nbsp;
+      </li>
+    <% end %>
   </ul>
+<% elsif user_type == "instructor" %>
+  <!-- Code for the instructor section goes here -->
+<% end %>
+
 <%= link_to "New task", new_task_path %>
