--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -7,8 +7,8 @@
   <%= form.label :email %><br/>
   <%= form.text_field :email %><br/>
 
-  <%= form.label :password_digest %><br/>
-  <%= form.text_field :password_digest %><br/>
+  <%= form.label :password %><br/>
+  <%= form.text_field :password %><br/>
 
   <%= form.label :college_id %><br/>
   <%= form.select :college_id, options_for_select(colleges_for_select),include_blank: true %><br/>
