--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,16 @@
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
-      <a href="/" class="d-flex align-items-center col-md-3 mx-5 mb-2 mb-md-0 text-dark text-decoration-none">
-        <i class="fs-1 bi-house" ></i>
-      </a>
+<header class="d-flex flex-wrap align-items-center justify-content-between py-3 border-bottom bg-dark">
+  <div class="d-flex align-items-start mx-5 mb-2 mb-md-0">
+    <%# <a href="#" class="ms-1 text-white text-decoration-none">
+      <i class="fs-1 bi bi-list"></i>
+    </a> %>
+    <a href="/" class="ms-2 text-white text-decoration-none">
+      <i class="fs-1 bi-house"></i>
+    </a>
+  </div>
 
 
 
       <div class="col-md-3 text-end">
         <button type="button" class="btn btn-outline-primary me-2">Login</button>
-        <button type="button" class="btn btn-primary">Sign-up</button>
       </div>
-    </header>
+</header>
