--- a/app/views/colleges/index.html.erb
+++ b/app/views/colleges/index.html.erb
@@ -2,15 +2,45 @@
 <p>Find me in app/views/colleges/index.html.erb</p>
 <ul>
   <% @colleges.each do |college| %>
-    <li>
-      <%= link_to college.college_name, college_path(college) %>&nbsp;&nbsp;&nbsp;
+  <li>
+    <%= link_to college.college_name, college_path(college) %>&nbsp;&nbsp;&nbsp;
     <%= link_to "Edit college", edit_college_path(college) %>&nbsp;&nbsp;&nbsp;
     <%= link_to 'Delete', college_path(college), method: :delete, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %> 
-</li>
-    
+      turbo_method: :delete,
+      turbo_confirm: "Are you sure?"
+    } %> 
+  </li>
+
   <% end %>
 </ul>
-<%= link_to "New college", new_college_path %>
+
+
+<div class="container mt-3">
+  <%= button_tag(type: "button", class: "btn btn-primary my-2 float-end") do %>
+  <%= link_to new_college_path do %>
+    Add College
+  <% end %>
+<% end %>
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
+      <tr class="table-primary">
+        <th>Course Name</th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @colleges.each do |college| %>
+      <tr>
+        <td><%= college.college_name %></td>
+
+        <td><%= link_to "Edit", edit_college_path(college) %></td>
+        <td><%= link_to 'Delete', college_path(college), method: :delete, data: {
+          turbo_method: :delete,
+          turbo_confirm: "Are you sure?"
+        } %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
