--- a/app/views/colleges/_college.html.erb
+++ b/app/views/colleges/_college.html.erb
@@ -1,9 +1,12 @@
 <h1>Colleges#index</h1>
 <div class="container-fluid shadow rounded mt-3 pb-2 ">
-  <%= button_tag(type: "button", class: "btn btn-primary my-2 float-end") do %>
-  <i class="bi bi-plus-square"></i>
-  <span>Add College</span>
+
+  <!-- Button trigger modal -->
+  <%= link_to new_college_path, class: "btn btn-primary my-2 float-end", data: {
+    bs_toggle: "modal", bs_target: "#newCollege", remote: true} do %>
+    <i class="bi bi-plus-square"></i><span class="mx-2">Add College</span>
   <% end %>
+
   <table class="table table-striped table-bordered table-auto ">
     <thead>
       <tr class="table-primary">
@@ -30,3 +33,27 @@
     </tbody>
   </table>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="newCollege" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Add College</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="newCollegeForm">
+        <div class="form-group">
+          <%= form_with(model: @college, url: colleges_path, local: false) do |form| %>
+          <%= form.label :college_name, class: "form-label" %>
+          <%= form.text_field :college_name, class: "form-control" %>
+          <%= form.submit "Submit", class: "btn btn-primary" %>
+          <% end %>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+     </div>
+      </div>
+    </div>
+  </div>
